src/objects/DF_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Verefied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Code Verefied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <label>Country Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FacebookId__c</fullName>
        <label>FacebookId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_18_or_over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is 18 or over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lives_in_England__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lives in England?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_Pledge_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Pledge Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Last_Name__c &amp; &quot;,  &quot; &amp; First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organisation ID</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipLabel>DF Champions</relationshipLabel>
        <relationshipName>DF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Name__c</fullName>
        <label>Pledge Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Events_Count__c</fullName>
        <label>Registered Events Count</label>
        <summaryForeignKey>DF_EventAttendee__c.DF_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Code_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session Code Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>DF Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>FacebookId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friends</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Newsletters__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Contact__c.Dementia_Friend</value>
        </filters>
        <label>Dementia Friends</label>
    </listViews>
    <listViews>
        <fullName>E_Newsletter_Subscribers</fullName>
        <columns>NAME</columns>
        <columns>Newsletters__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Contact__c.E_Newsletter_Subscriber</value>
        </filters>
        <label>E-Newsletter Subscribers</label>
    </listViews>
    <nameField>
        <label>DF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF Contacts</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>Website Admin</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend</fullName>
        <active>true</active>
        <label>Dementia Friend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend_Champion</fullName>
        <active>true</active>
        <label>Dementia Friend Champion</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Newsletter_Subscriber</fullName>
        <active>true</active>
        <label>E-Newsletter Subscriber</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>